content/docs/v1.5/api/log.mdx
---
title: "Log API"
description: "API endpoints for application log configuration, buffered log entries, and real-time system log streaming."
---

## Get Log configuration

Returns the current logger configuration.

```bash
curl http://drydock:3000/api/v1/log

{
  "level":"debug"
}
```

## Get application log entries

Returns log entries from the in-memory ring buffer (last 1,000 entries).
If `DD_LOG_BUFFER_ENABLED=false`, this endpoint returns an empty array.

```bash
curl http://drydock:3000/api/v1/log/entries
```

### Query parameters

| Parameter | Type | Description |
| --- | --- | --- |
| `level` | string | Filter by log level (`trace`, `debug`, `info`, `warn`, `error`, `fatal`) |
| `component` | string | Filter by component name |
| `tail` | integer | Number of most recent entries to return |
| `since` | integer | Unix timestamp (milliseconds) — only return entries after this time |

Invalid `level` or `component` values return `400 Bad Request`.

### Example

```bash
curl "http://drydock:3000/api/v1/log/entries?level=error&tail=50"

[
  {
    "timestamp": 1771243200000,
    "level": "error",
    "component": "registry.hub.public",
    "msg": "Rate limit exceeded"
  }
]
```

## Get log component names

Returns sorted unique component names from the in-memory log ring buffer.
Useful for populating a component filter dropdown in the UI.

If `DD_LOG_BUFFER_ENABLED=false`, this endpoint returns an empty array.

```bash
curl http://drydock:3000/api/v1/log/components

[
  "api",
  "registry.ghcr.private",
  "registry.hub.public",
  "trigger.mqtt.qa",
  "trigger.slack.myslack",
  "watcher.docker.local"
]
```

## Stream application logs (WebSocket)

Streams system log entries over WebSocket. The server first sends a filtered backfill from the in-memory buffer, then pushes new entries in real time.

- Canonical endpoint: `WS /api/v1/log/stream`
- Compatibility alias: `WS /api/log/stream`

### Query parameters

| Parameter | Type | Description |
| --- | --- | --- |
| `level` | string | Minimum level filter (`debug`, `trace`, `info`, `warn`, `error`, `fatal`) |
| `component` | string | Substring filter for component name |
| `tail` | integer | Number of historical entries to backfill on connect (default: `100`) |

### Example

```text
ws://drydock:3000/api/v1/log/stream?tail=100&level=warn&component=api
```

Example frame payload:

```json
{
  "timestamp": 1771262400000,
  "level": "warn",
  "component": "api",
  "msg": "CORS is enabled; review the configured origin"
}
```

### Authentication and limits

- Requires an authenticated session (cookie-based auth).
- WebSocket upgrade origin checks must pass.
- Connection attempts are rate-limited (1,000 upgrades per 15-minute window per identity/IP key).

## Get agent log entries

Returns log entries from a connected agent, proxied through the controller.

```bash
curl http://drydock:3000/api/v1/agents/:name/log/entries
```

Accepts the same query parameters as the application log entries endpoint above.
